# trial-project

./: README.md  pyproject.toml
amazing_hunting/: settings.py  urls.py
authentication/: models.py  serializers.py
authentication/migrations/: 0001_initial.py  0002_user_role.py
companies/migrations/: 0001_initial.py
tests/: fixtures.py
tests/vacancies/: vacancy_list_test.py
vacancies/: models.py  permissions.py  serializers.py  views.py
vacancies/migrations/: 0001_initial.py  0002_vacancy_user.py  0003_skill_vacancy_skills.py  0004_alter_skill_options_alter_vacancy_options.py  0005_skill_is_active.py  0006_vacancy_likes.py  0007_vacancy_min_experience.py  0008_vacancy_updated_at.py
